k8s/manifests/insights/collector/network-policies/allow-egress.yaml
# Allow egress to master-data and engine-simulator
# (insights-collector calls both of them)
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress
  namespace: insights-collector
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: master-data
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: engine-simulator
