k8s/manifests/insights/collector/network-policies/allow-ingress.yaml
# Allow ingress from forecast-experience
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress
  namespace: insights-collector
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: forecast-experience
